--- a/src/main/resources/assets/sync/lang/en_us.lang
+++ b/src/main/resources/assets/sync/lang/en_us.lang
@@ -41,7 +41,8 @@ sync.config.prop.ratioRF.name=RF:PG Ratio
 sync.config.prop.showAllShellInfoInGui.name=Show All Shell Info In Gui
 sync.config.prop.transferPersistentItems.name=Try tranfering persistent items
 
-sync.config.prop.shellConstructionPowerRequirement.comment=Power requirement for Shell Construction
+sync.config.prop.shellConstructionPowerRequirement.comment=Power requirement for Shell Construction in piggawatts
+sync.config.prop.shellConstructionPowerUsageRate.comment=Power usage per tick in rf for Shell Construction. This will change the speed at which the shell is constructed.
 sync.config.prop.shellStoragePowerRequirement.comment=Power requirement per tick in piggawatts to keep shell storage active.\n0 = No requirement
 sync.config.prop.allowCrossDimensional.comment=Allow cross-dimensional shell syncing?\nWARNING: There are issues with going in and out of The End, where you require a relog AFTER syncing because chunks may not load.\nEnable The End travel at your own risk.\n0 = No\n1 = Yes, but not in The End\n2 = Yes, even in the End
 sync.config.prop.reduceHealthOnDeathSync.comment=Reduce Health On Death Sync (Additive)?\n(2 = 1 heart)
